Update formating, use newer and minified jquery/jquery-ui

--- a/rumours.html
+++ b/rumours.html
@@ -2,11 +2,16 @@
     <meta charset="utf-8">
     <title>Bard's Gate Rumour Generator</title>
     <style>
+    #enc {
+        font-size:smaller;
+        margin-top:1em;
+    }
     .top_button {
         display:inline-block;
         border-style:ridge;
         border-width:thin;
-        margin:5px;
+        font-size:x-large !important;
+        margin:1em;
     }
     .title {
         font-style:x-large;
@@ -19,6 +24,9 @@
 	margin-bottom:2em;
         font-style:italic;
         font-size:x-small;
+    }
+    .rumour {
+        margin-top:0.5em;
     }
     </style>
 
@@ -34,10 +42,14 @@
 <div class="rumour">
 
 </div>
+<div id='enc'>
+    If you like this then please also try my 
+<a href='http://www.gregfarrell.org/enc'>Bard's Gate encounter generator.</a>
+</a>
 </div>
 
-<script src="jquery.js"></script>
-<script src="jquery-ui.js"></script>
+<script src="jquery.min.js"></script>
+<script src="jquery-ui.min.js"></script>
 <script src="rumours.js"></script>
 <script>
 function getRandomInt(min, max) {
@@ -53,7 +65,6 @@ function onReady()
 {
     $('#generate').button().click(generate_rumour);
     $('.count').html(rumours.length + " rumours available.");
-
 
 };
     $(document).ready(onReady);
